# SO-Scheduler

./: CMakeLists.txt  Cola.c  Cola.h  Interface.c  Interface.h  Process.c  Process.h  Queue.c  Queue.h  README.md  Scheduler.c  Scheduler.h  input.txt  main  main.c
